--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4.6.0
         with:
-          path: v7/bukkit/*
+          path: *
