--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,9 @@ on:
       - main
 jobs:
   build:
+    permissions:
+      contents: write
+      discussions: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
