--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4.6.0
         with:
-          path: build/*
+          path: v7/*
